--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -89,7 +89,7 @@
         </div>
         <!-- </div> -->
     </div>
-    <div class="section">
+    <div class="section pb-0">
         <!-- <div class="container"> -->
         <div class="row">
             <div class="orangeDiv col-12 d-sm-none">
@@ -145,6 +145,9 @@
                         <div class="form-group">
                             <label for="message" class="bmd-label-floating">Message</label>
                             <textarea class="form-control" id="message" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button class="btn w-100 btn-followUp">Submit</button>
                         </div>
                     </form>
                 </div>
