--- a/src/assets/sass/paper-kit.scss
+++ b/src/assets/sass/paper-kit.scss
@@ -15,9 +15,7 @@
 
 @import "paper-kit/variables";
 @import "paper-kit/mixins";
-
 @import "paper-kit/typography";
-
 // Core CSS
 @import "paper-kit/misc";
 @import "paper-kit/buttons";
@@ -33,11 +31,8 @@
 @import "paper-kit/images";
 @import "paper-kit/cards";
 @import "paper-kit/footers";
-
-
 // Bootstrap Switch
 @import "paper-kit/bootstrap-switch";
-
 // Fancy Stuff
 @import "paper-kit/dropdown";
 //
@@ -53,3 +48,7 @@
 @import "paper-kit/plugins/datetimepicker";
 @import "paper-kit/social-buttons";
 @import "paper-kit/examples";
+body,
+html {
+    overflow-x: hidden;
+}
