padding and button

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -95,23 +95,19 @@
                     <h3>Popovers</h3>
                 </div>
 
-                <button type="button" class="btn btn-outline-danger btn-round" placement="right"
-                    ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on right">
+                <button type="button" class="btn btn-outline-danger btn-round" placement="right" ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on right">
                     on right
                 </button>
 
-                <button type="button" class="btn btn-outline-danger btn-round" placement="top"
-                    ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on top">
+                <button type="button" class="btn btn-outline-danger btn-round" placement="top" ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on top">
                     on top
                 </button>
 
-                <button type="button" class="btn btn-outline-danger btn-round" placement="left"
-                    ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on left">
+                <button type="button" class="btn btn-outline-danger btn-round" placement="left" ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on left">
                     on left
                 </button>
 
-                <button type="button" class="btn btn-outline-danger btn-round" placement="bottom"
-                    ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on bottom">
+                <button type="button" class="btn btn-outline-danger btn-round" placement="bottom" ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on bottom">
                     on bottom
                 </button>
 
@@ -121,7 +117,7 @@
                 <div class="tim-title">
                     <h3>Datepicker</h3>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class='col-sm-6'>
                         <form class="form-inline">
                             <div class="form-group">
@@ -137,7 +133,7 @@
                             </div>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="col-md-6">
                 <div class="tim-title">
@@ -147,7 +143,7 @@
                 <button type="button" class="btn btn-outline-danger btn-round" placement="right" ngbTooltip="Tooltip on right">
                    on right
                </button>
-               <button type="button" class="btn btn-outline-danger btn-round" placement="left" ngbTooltip="Tooltip on left">
+                <button type="button" class="btn btn-outline-danger btn-round" placement="left" ngbTooltip="Tooltip on left">
                   on left
                </button>
                 <button type="button" class="btn btn-outline-danger btn-round" placement="top" ngbTooltip="Tooltip on top">
