padding and button

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,7 +1,8 @@
 @import '~animate.css/animate.min.css';
 body,
 html {
-    overflow-x: hidden;
+    // overflow-x: hidden;
+    // display: table;
 }
 
 .page-header {
