--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,11 +5,11 @@
             <div class="col-sm-6 col-12 VHAlign" style="display: flex">
                 <div class="motto">
                     <h1 class="animated fadeInUp">Building Rapport Through Simple Habits</h1>
-                    <h6 style="text-transform: none;">Turn skills of professional marketers into repeatable habits. Lead the way in relationship focused business, build a network of trust, leading to a lifetime of prosperity.</h6>
+                    <h6>Turn skills of professional marketers into repeatable habits. Lead the way in relationship focused business, build a network of trust, leading to a lifetime of prosperity.</h6>
                     <br />
-                    <a href="" class="btn mr-4"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
+                    <a href="" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
                     </a>
-                    <a href="" class="btn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
+                    <a href="" class="btn appBtn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
                     </a>
                 </div>
             </div>
