--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -46,19 +46,19 @@
             <ul class="navbar-nav mr-0 d-none d-lg-flex">
                 <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/" target="_blank">
-                        <img width="40" src="../../../assets/img/SVG/fb_icon.svg" alt="">
+                        <img class="fbIcon" width="40" [src]="fbLogo" alt="">
                         <p class="d-lg-none">Facebook</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/" target="_blank">
-                        <img width="40" src="../../../assets/img/SVG/twitter_icon.svg" alt="">
+                        <img class="fbIcon" width="40" [src]="twitterLogo" alt="">
                         <p class="d-lg-none">Twitter</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom" href="https://www.linkedin.com/" target="_blank">
-                        <img width="40" src="../../../assets/img/SVG/linked_in_icon.svg" alt="">
+                        <img class="fbIcon" width="40" [src]="linkdInLogo" alt="">
                         <p class="d-lg-none">Linkedin</p>
                     </a>
                 </li>
