--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,28 +1,63 @@
 @import '~animate.css/animate.min.css';
-body,
-html {
-    // overflow-x: hidden;
-    // display: table;
-}
-
 .page-header {
     background-attachment: fixed;
-    background-image: url('../../assets/img/PNG/background_image.png');
+    // background-image: url('../../assets/img/PNG/background_image.png');
     background-color: transparent;
     overflow: visible;
+    .filter::after {
+        background-image: linear-gradient(303deg, #3c475a, #111a2b);
+        z-index: 0!important;
+    }
 }
 
-.page-header .filter::after {
-    background-image: linear-gradient(299deg, rgba(60, 71, 90, 0.5), rgba(17, 26, 43, 0.5));
+.page-header::after {
+    background-image: url('../../assets/img/PNG/background_image.png');
+    background-attachment: fixed;
     z-index: 0;
+    content: "";
+    display: block;
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
 }
 
 .navbar .nav-link p {
     color: #ffffff;
 }
 
+.motto {
+    h1 {
+        font-family: 'Monsterrat-SemiBold';
+        line-height: 1.45em;
+    }
+    h6 {
+        font-family: 'Roboto-Regular';
+        font-weight: 400;
+        line-height: 1.75em;
+        text-transform: none;
+    }
+    .appBtn {
+        font-family: 'Monsterrat-SemiBold';
+        background-color: #5b6c85;
+        border: none;
+    }
+     ::after {
+        display: none;
+    }
+}
+
 .main .section:first-of-type {
     z-index: 0;
+}
+
+.main {
+    overflow-x: hidden;
+    .section {
+        padding: 70px 15px;
+    }
 }
 
 .VHAlign {
@@ -32,21 +67,29 @@ html {
 
 .title {
     font-weight: 500;
+    font-family: 'Monsterrat-Medium';
     color: #202020;
     span {
         font-weight: 900;
+        font-family: 'Monsterrat-Bold';
     }
 }
 
 .description {
     color: #5e6c7f;
     font-size: 16px;
+    font-family: 'Roboto-Regular';
 }
 
 .quote {
     background-image: linear-gradient(279deg, #3c475a, #111a2b);
     .title {
         color: white;
+        font-family: 'Monsterrat-Bold';
+    }
+    .author {
+        font-family: 'Monsterrat-Medium';
+        color: rgba(255, 255, 255, 0.6);
     }
 }
 
@@ -55,6 +98,7 @@ html {
     border: none;
     border-radius: 0;
     text-transform: none;
+    font-family: 'Monsterrat-SemiBold';
 }
 
 .orangeDiv,
