--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,3 +1,11 @@
 .footer {
     border: solid 1px #dfe2e5;
+    .copyright {
+        color: #5e6c7f;
+        font-family: 'Roboto-Regular';
+    }
+    a {
+        font-family: 'Roboto-Medium';
+        color: #202020;
+    }
 }
