--- a/src/assets/sass/paper-kit.scss
+++ b/src/assets/sass/paper-kit.scss
@@ -53,3 +53,39 @@ html {
     overflow-x: hidden;
     display: table;
 }
+
+@font-face {
+    font-family: 'Monsterrat-Regular';
+    src: url('../fonts/Monsterrat/Montserrat-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Monsterrat-Bold';
+    src: url('../fonts/Monsterrat/Montserrat-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Monsterrat-SemiBold';
+    src: url('../fonts/Monsterrat/Montserrat-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Monsterrat-Medium';
+    src: url('../fonts/Monsterrat/Montserrat-Medium.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Roboto-Regular';
+    src: url('../fonts/Roboto/Roboto-Regular-webfont.eot');
+    src: url('../fonts/Roboto/Roboto-Regular-webfont.eot') format('embedded-opentype'), url('../fonts/Roboto/Roboto-Regular-webfont.woff') format('woff'), url('../fonts/Roboto/Roboto-Regular-webfont.ttf') format('truetype'), url('../fonts/Roboto/Roboto-Regular-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto-Medium';
+    src: url('../fonts/Roboto/Roboto-Medium-webfont.eot');
+    src: url('../fonts/Roboto/Roboto-Medium-webfont.eot') format('embedded-opentype'), url('../fonts/Roboto/Roboto-Medium-webfont.woff') format('woff'), url('../fonts/Roboto/Roboto-Medium-webfont.ttf') format('truetype'), url('../fonts/Roboto/Roboto-Medium-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
