--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -19,7 +19,7 @@
             <nav class="footer-nav">
                 <ul>
                     <li>
-                        <a href="">
+                        <a [routerLink]="['/privacy']" routerLinkActive="router-link-active">
                 Privacy Policy 
             </a>
                     </li>
