--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -28,12 +28,12 @@
                     </a>
                 </li>
                 <li class="nav-item d-lg-none">
-                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/followupprofessional" target="_blank">
                         <p class="d-lg-none">Facebook</p>
                     </a>
                 </li>
                 <li class="nav-item d-lg-none">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/followup_pro" target="_blank">
                         <p class="d-lg-none">Twitter</p>
                     </a>
                 </li>
@@ -45,13 +45,13 @@
             </ul>
             <ul class="navbar-nav mr-0 d-none d-lg-flex">
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/followupprofessional" target="_blank">
                         <img class="fbIcon" width="40" [src]="fbLogo" alt="">
                         <p class="d-lg-none">Facebook</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/followup_pro" target="_blank">
                         <img class="fbIcon" width="40" [src]="twitterLogo" alt="">
                         <p class="d-lg-none">Twitter</p>
                     </a>
