--- a/src/assets/sass/paper-kit.scss
+++ b/src/assets/sass/paper-kit.scss
@@ -52,6 +52,8 @@ body,
 html {
     overflow-x: hidden;
     display: table;
+    width: 100%;
+    height: 100%;
 }
 
 @font-face {
@@ -88,4 +90,32 @@ html {
     src: url('../fonts/Roboto/Roboto-Medium-webfont.eot') format('embedded-opentype'), url('../fonts/Roboto/Roboto-Medium-webfont.woff') format('woff'), url('../fonts/Roboto/Roboto-Medium-webfont.ttf') format('truetype'), url('../fonts/Roboto/Roboto-Medium-webfont.svg') format('svg');
     font-weight: normal;
     font-style: normal;
+}
+
+.main {
+    overflow-x: hidden;
+    .section {
+        padding: 70px 15px;
+    }
+}
+
+.VHAlign {
+    justify-items: center;
+    align-items: center;
+}
+
+.title {
+    font-weight: 500;
+    font-family: 'Monsterrat-Medium';
+    color: #202020;
+    span {
+        font-weight: 900;
+        font-family: 'Monsterrat-Bold';
+    }
+}
+
+.description {
+    color: #5e6c7f;
+    font-size: 16px;
+    font-family: 'Roboto-Regular';
 }
