--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -124,7 +124,7 @@
             </div>
         </div>
     </div>
-    <div class="contact section landing-section">
+    <div class="contact section landing-section" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
