--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -17,13 +17,13 @@
                         <p>Features</p>
                     </a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Blog" data-placement="bottom" href="">
                         <p>Blog</p>
                     </a>
-                </li>
+                </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Contact" data-placement="bottom" href="">
+                    <a class="nav-link" rel="tooltip" title="Contact" data-placement="bottom" routerLink fragment="contact" (click)="scrollIntoView('contact')">
                         <p>Contact</p>
                     </a>
                 </li>
