--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -21,7 +21,7 @@
     <!-- </div> -->
 </div>
 <div class="main">
-    <div class="section text-left">
+    <div class="section text-left" id="features">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 mr-auto ml-auto">
