--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Features" data-placement="bottom" href="">
+                    <a class="nav-link" rel="tooltip" title="Features" data-placement="bottom" [routerLink]="['/']" fragment="features" (click)="scrollIntoView('features')">
                         <p>Features</p>
                     </a>
                 </li>
@@ -23,7 +23,7 @@
                     </a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Contact" data-placement="bottom" routerLink fragment="contact" (click)="scrollIntoView('contact')">
+                    <a class="nav-link" rel="tooltip" title="Contact" data-placement="bottom" [routerLink]="['/']" fragment="contact" (click)="scrollIntoView('contact')">
                         <p>Contact</p>
                     </a>
                 </li>
