--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,8 +4,9 @@
         <div class="row">
             <div class="col-sm-6 col-12 VHAlign" style="display: flex">
                 <div class="motto">
-                    <h1 class="animated fadeInUp">Building Rapport Through Simple Habits</h1>
-                    <h6>Turn skills of professional marketers into repeatable habits.<br />Lead the way in relationship focused business, build a network<br />of trust, leading to a lifetime of prosperity.</h6>
+                    <h1 class="animated fadeInUp">The Power of the Popup</h1>
+                    <h6>The most powerful skill in selling is getting people to trust you. This is mainly done through listening and building rapport with those people. The FollowUp Popup allows you to do just that! giving you everything you need, exactly
+                        when you need it! <a href="https://youtu.be/7x3_HankJP0" target="_blank">See for yourself</a></h6>
                     <br />
                     <a href="" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
                     </a>
