--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-md-12 mr-auto ml-auto">
                     <h2 class="title">Meet <span>Follow Up</span></h2>
-                    <h5 class="description">Lorem ipsum dolor sit amet, et alii commune concludaturque eam, ea eam mentitum officiis reprimique. Vim ad tale solet constituam. No debet perfecto theophrastus mea, te vim fastidii lucilius, tritani bonorum temporibus ei sed. </h5>
+                    <h5 class="description">Turn skills of professional marketers into repeatable habits. Lead the way in relationship focused business, build a network of trust, leading to a lifetime of prosperity.</h5>
                 </div>
             </div>
         </div>
