--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -6,7 +6,7 @@
                 <div class="motto">
                     <h1 class="animated fadeInUp">The Power of the Popup</h1>
                     <h6>The most powerful skill in selling is getting people to trust you. This is mainly done through listening and building rapport with those people. The FollowUp Popup allows you to do just that! giving you everything you need, exactly
-                        when you need it! <a style="color: #e5b000" href="https://youtu.be/7x3_HankJP0" target="_blank">See for yourself</a></h6>
+                        when you need it! <a style="color: #e5b000;font-size: 14px;font-weight: bold;" href="https://youtu.be/7x3_HankJP0" target="_blank">See for yourself</a></h6>
                     <br />
                     <a href="" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
                     </a>
