--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true">
+<div class="page-header" data-parallax="true" id="home">
     <div class="filter"></div>
     <div class="container">
         <div class="row">
@@ -27,7 +27,8 @@
             <div class="row">
                 <div class="col-md-12 mr-auto ml-auto">
                     <h2 class="title">Meet <span>Follow Up</span></h2>
-                    <h5 class="description">Turn skills of professional marketers into repeatable habits. Lead the way in relationship focused business, build a network of trust, leading to a lifetime of prosperity.</h5>
+                    <h5 class="description">Turn skills of professional marketers into repeatable habits. Lead the way in relationship focused business, build a network of trust, leading to a lifetime of prosperity.
+                    </h5>
                 </div>
             </div>
         </div>
@@ -130,25 +131,27 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title"><span>Contact Us</span></h2>
-                    <form class="contact-form">
+                    <form class="contact-form" #personal="ngForm" (ngSubmit)="sendMessage(personal)">
+                        <mat-form-field class="mb-2">
+                            <input name="contactName" [(ngModel)]="contact.name" maxlength="100" matInput placeholder="Name" type="text" required>
+                            <mat-error *ngIf="name.invalid">{{getNameMessage()}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="mb-2">
+                            <input name="contactEmail" [(ngModel)]="contact.email" maxlength="100" matInput placeholder="Email" required>
+                            <mat-error *ngIf="email.invalid">{{getEmailMessage()}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="mb-2">
+                            <!-- <span matPrefix>+91 &nbsp;</span> -->
+                            <input name="contactMobile" [(ngModel)]="contact.mobile" maxlength="15" minlength="9" matInput placeholder="Mobile Number" type="tel" required [textMask]="{mask: mobileMask}">
+                            <mat-error *ngIf="mobile.invalid">{{getMobileMessage()}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="mb-2">
+                            <textarea name="contactMessage" [(ngModel)]="contact.message" maxlength="400" matInput placeholder="Message" required></textarea>
+                            <mat-error *ngIf="message.invalid">{{getMessage()}}</mat-error>
+                        </mat-form-field>
                         <div class="form-group">
-                            <label for="name" class="bmd-label-floating">Name</label>
-                            <input type="text" class="form-control" id="name">
-                        </div>
-                        <div class="form-group">
-                            <label for="email" class="bmd-label-floating">Email</label>
-                            <input type="email" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="phone" class="bmd-label-floating">Mobile Number</label>
-                            <input type="text" class="form-control" id="phone">
-                        </div>
-                        <div class="form-group">
-                            <label for="message" class="bmd-label-floating">Message</label>
-                            <textarea class="form-control" id="message" rows="3"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button class="btn w-100 btn-followUp">Submit</button>
+                            <button mat-raised-button color="primary" class="btn w-100 btn-followUp">Submit</button>
+                            <!-- <button class="btn w-100 btn-followUp"></button> -->
                         </div>
                     </form>
                 </div>
