--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true" id="home">
+<div class="page-header" data-parallax="true" #home id="home">
     <div class="filter"></div>
     <div class="container">
         <div class="row">
@@ -24,7 +24,7 @@
     <!-- </div> -->
 </div>
 <div class="main">
-    <div class="section text-left" id="features">
+    <div class="section text-left" #features id="features">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 mr-auto ml-auto">
@@ -128,7 +128,7 @@
             </div>
         </div>
     </div>
-    <div class="contact section landing-section" id="contact">
+    <div class="contact section landing-section" #contact id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
