--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,9 +4,9 @@
         <div class="row">
             <div class="col-sm-6 col-12 VHAlign" style="display: flex">
                 <div class="motto">
-                    <h1 class="animated fadeInUp">The Power of the Popup</h1>
-                    <h6>The most powerful skill in selling is getting people to trust you. This is mainly done through listening and building rapport with those people. The FollowUp Popup allows you to do just that! giving you everything you need, exactly
-                        when you need it!
+                    <h1 class="animated fadeInUp">FollowUp</h1>
+                    <h3>Building rapport through simple habits</h3>
+                    <h6>Our goal is to harness the power of human habit and make building lasting relationships second nature for everyone.
                         <!-- <a style="color: #e5b000;font-size: 14px;font-weight: bold;" href="https://youtu.be/7x3_HankJP0" target="_blank">See for yourself</a> -->
                     </h6>
                     <br />
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-md-12 mr-auto ml-auto">
                     <h2 class="title">Meet <span>Follow Up</span></h2>
-                    <h5 class="description">Turn skills of professional marketers into repeatable habits. Lead the way in relationship focused business, build a network of trust, leading to a lifetime of prosperity.
+                    <h5 class="description">Turn the skills of professional marketers into repeatable habits. Lead the way in relationship focused business, build a network of trust, and live a life of prosperity.
                     </h5>
                 </div>
             </div>
@@ -43,12 +43,10 @@
             </div>
             <div class="col-md-6 offset-md-2">
                 <img src="../../assets/img/SVG/orange_mark.svg" alt="">
-                <h2 class="title animated fadeInUp">Stay <span>Up To Date</span></h2>
+                <h2 class="title animated fadeInUp">Power of the <span>popup</span></h2>
                 <h5 class="description animated fadeInUp">
-                    The FollowUp calendar is there for you to keep track of the follow up calls you set up with your customers. As a professional business owner it is key to make sure you always set the next exposure at the end of a call, and even more importantly, always
-                    FollowUp when you say you will.
-                    <br> FollowUp calendar is enhanced through the power of the popup. The popup allows you so set up an event straight after a call, at the point where all the information is fresh. It makes the process simple and seamless, allowing you
-                    to get on with your day worry free
+                    The Popup is what makes FollowUp unique. It provides you with the tools to do the things you need to do, when you need to do them. <br> Making notes and setting FollowUps with customers is a professional skill. It may seem simple but
+                    we all forget from time to time and doing so can have lasting effects on our relationships with our customers. With the FollowUp Popup you can relax and trust that Followup will be there too keep you on track, 24/7, 365.
                 </h5>
             </div>
         </div>
@@ -66,8 +64,7 @@
                     <span>Your Customers Are</span></h2>
                 <h5 class="description animated fadeInUp">
                     FollowUp Contacts makes finding all the information about a customer easier than ever before.
-                    <br> All the events, all the calls and all the notes, everything that you need to know about your customers is tied to their contact profile and available in FollowUp. The popup is what drives this integration and what makes FollowUp
-                    so effective.
+                    <br> All events, calls, notes and actions are tied to your contacts profile and available at any time. The popup is what drives this integration and what makes FollowUp so effective.
                 </h5>
             </div>
             <div class="yellowDiv col-md-3 offset-md-2 d-none d-sm-flex">
@@ -101,12 +98,12 @@
             </div>
             <div class="col-md-6 offset-md-1">
                 <img src="../../assets/img/SVG/orange_mark.svg" alt="">
-                <h2 class="title animated fadeInUp">There
-                    <span>When You Need It</span></h2>
+                <h2 class="title animated fadeInUp">Stay
+                    <span>up to date</span></h2>
                 <h5 class="description animated fadeInUp">
-                    The Popup is what makes FollowUp unique.It provides you with the tools to do the things you need to do, when you need to do them.
-                    <br> Making notes and setting FollowUps with customers is a professional skill. It may seem simple but we all forget from time to time and doing so can have lasting effects on our relationships with our customers.With the FollowUp
-                    Popup you can relax and trust that Followup will be there when you need it.
+                    Keep track of the FollowUps you set up with your customers using the FollowUp calendar. Professional business owners always set the next exposure at the end of a call but even more importantly, they always FollowUp when they say they will.
+                    <br> FollowUp calendar makes this simpler than ever through the power of the popup. The popup allows you so set an event straight after a call, at the moment where all the information is fresh. It makes the process intuitive and seamless,
+                    allowing you to get on with your day worry free.
                 </h5>
             </div>
             <div class="orangeDiv col-md-3 offset-md-2 d-none d-sm-flex">
