--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="col-sm-6 col-12  d-none d-sm-flex">
-                <img class="position-absolute w-100 animated fadeInRight" src="../../assets/img/PNG/main_img.png" alt="">
+                <img class="position-absolute w-100 animated fadeInRight" style="z-index:11" src="../../assets/img/PNG/main-bg.png" alt="">
             </div>
         </div>
     </div>
@@ -39,7 +39,7 @@
         <!-- <div class="container"> -->
         <div class="row">
             <div class="orangeDiv col-md-3">
-                <img class="towardsLeft animated fadeInUp" src="../../assets/img/PNG/up_to_date.png" alt="">
+                <img class="towardsLeft animated fadeInUp" src="../../assets/img/PNG/pop-up.png" alt="">
             </div>
             <div class="col-md-6 offset-md-2">
                 <img src="../../assets/img/SVG/orange_mark.svg" alt="">
@@ -94,7 +94,7 @@
         <!-- <div class="container"> -->
         <div class="row">
             <div class="orangeDiv col-12 d-sm-none">
-                <img class="towardsRight animated fadeInUp" src="../../assets/img/PNG/when_you_need.png" alt="">
+                <img class="towardsRight animated fadeInUp" src="../../assets/img/PNG/up_to_date.png" alt="">
             </div>
             <div class="col-md-6 offset-md-1">
                 <img src="../../assets/img/SVG/orange_mark.svg" alt="">
@@ -107,7 +107,7 @@
                 </h5>
             </div>
             <div class="orangeDiv col-md-3 offset-md-2 d-none d-sm-flex">
-                <img class="towardsRight animated fadeInUp" src="../../assets/img/PNG/when_you_need.png" alt="">
+                <img class="towardsRight animated fadeInUp" src="../../assets/img/PNG/up_to_date.png" alt="">
             </div>
         </div>
         <!-- </div> -->
