--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,13 +10,15 @@
                         <!-- <a style="color: #e5b000;font-size: 14px;font-weight: bold;" href="https://youtu.be/7x3_HankJP0" target="_blank">See for yourself</a> -->
                     </h6>
                     <br />
-                    <a href="" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
-                    </a>
-                    <a href="" class="btn appBtn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
-                    </a>
+                    <div class="col-12 p-0 flex-row flex">
+                        <a href="" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
+                        </a>
+                        <a href="" class="btn appBtn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-12  d-none d-sm-flex">
+            <div class="col-sm-6 col-12  d-none d-sm-block">
                 <img class="position-absolute w-100 animated fadeInRight" style="z-index:11" src="../../assets/img/PNG/main-bg.png" alt="">
             </div>
         </div>
