--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,9 +11,9 @@
                     </h6>
                     <br />
                     <div class="col-12 p-0 flex-row flex">
-                        <a href="javascript:void(0)" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">Coming Soon
+                        <a href="https://itunes.apple.com/us/app/followup-pro/id1458386312?ls=1&mt=8" target="_blank" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
                         </a>
-                        <a href="https://play.google.com/store/apps/details?id=uk.co.followuppro.followuppro.new" class="btn appBtn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
+                        <a href="https://play.google.com/store/apps/details?id=uk.co.followuppro.followuppro.new" target="_blank" class="btn appBtn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
                         </a>
                     </div>
                 </div>
