--- a/src/assets/sass/paper-kit.scss
+++ b/src/assets/sass/paper-kit.scss
@@ -141,3 +141,7 @@ html {
 .mat-form-field.mat-focused .mat-form-field-ripple {
     background-color: #e5b000 !important;
 }
+
+.formDiv .mat-form-field-appearance-legacy .mat-form-field-label {
+    color: rgba(255, 255, 255, 0.5);
+}
