--- a/src/app/subscription/subscription.component.scss
+++ b/src/app/subscription/subscription.component.scss
@@ -1,6 +1,6 @@
 .page-header {
     min-height: 100vh;
-    padding-top: 15vh;
+    padding: 15vh 0;
     h1 {
         font-family: 'Monsterrat-SemiBold';
         line-height: 1.45em;
