--- a/src/app/success/success.component.scss
+++ b/src/app/success/success.component.scss
@@ -1,5 +1,6 @@
 .page-header {
     min-height: 100vh;
+    padding: 15vh 0;
     h3 {
         font-family: 'Monsterrat-SemiBold';
         line-height: 1.45em;
