country code and loader

--- a/src/assets/sass/paper-kit.scss
+++ b/src/assets/sass/paper-kit.scss
@@ -145,3 +145,7 @@ html {
 .formDiv .mat-form-field-appearance-legacy .mat-form-field-label {
     color: rgba(255, 255, 255, 0.5);
 }
+
+.mat-select-value {
+    color: white !important;
+}
