--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-navbar></app-navbar>
+<!-- <ng-http-loader [backdrop]="false" [backgroundColor]="'#ff0000'" [debounceDelay]="100" [extraDuration]="300" [minDuration]="300" [opacity]=".6" [spinner]="spinkit.skWave"></ng-http-loader> -->
+<div class="loaderMaterial" *ngIf="service.loader">
+    <mat-progress-spinner class="example-margin" [color]="'accent'" [mode]="'indeterminate'">
+    </mat-progress-spinner>
+</div>
 <router-outlet></router-outlet>
 <app-footer *ngIf="removeFooter()"></app-footer>
