--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -25,7 +25,15 @@
                         <input name="signupEmail" [(ngModel)]="signup.email" maxlength="100" matInput placeholder="Email" required>
                         <mat-error *ngIf="email.invalid">{{getEmailMessage()}}</mat-error>
                     </mat-form-field>
-                    <mat-form-field class="mb-2 col-12">
+                    <mat-form-field class="mb-2 col-2">
+                        <mat-label>Code</mat-label>
+                        <mat-select [(ngModel)]="signup.code" name="signupCode">
+                            <mat-option *ngFor="let country of countries" [value]="country.dial_code">
+                                {{country.dial_code}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field class="mb-2 col-10">
                         <!-- <span matPrefix>+91 &nbsp;</span> -->
                         <input name="signupMobile" [(ngModel)]="signup.mobile" maxlength="15" minlength="9" matInput placeholder="Mobile Number" type="tel" required [textMask]="{mask: mobileMask}">
                         <mat-error *ngIf="mobile.invalid">{{getMobileMessage()}}</mat-error>
