--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -50,7 +50,7 @@
                         <button mat-raised-button color="primary" class="btn w-100 btn-followUp">Sign Up</button>
                         <!-- <button class="btn w-100 btn-followUp"></button> -->
                     </div>
-                    <label class="col-12">By clicking “Sign Up” above, you are agreeing to our Terms & Conditions.</label>
+                    <!-- <label class="col-12">By clicking “Sign Up” above, you are agreeing to our Terms & Conditions.</label> -->
                 </form>
             </div>
         </div>
