text changes, phone nonrequired, card skipped

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -121,7 +121,7 @@
                     <img src="../../assets/img/SVG/quote_icon.svg" alt="">
                 </div>
                 <div class="col-md-8 mr-auto">
-                    <h2 class="title mt-0">fortune is in the follow up</h2>
+                    <h2 class="title mt-0">The fortune is in the follow up</h2>
                     <h3 class="author">By Eric Worre</h3>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                         </mat-form-field>
                         <mat-form-field class="mb-2">
                             <!-- <span matPrefix>+91 &nbsp;</span> -->
-                            <input name="contactMobile" [(ngModel)]="contact.mobile" maxlength="15" minlength="9" matInput placeholder="Mobile Number" type="tel" required [textMask]="{mask: mobileMask}">
+                            <input name="contactMobile" [(ngModel)]="contact.mobile" maxlength="15" minlength="9" matInput placeholder="Mobile Number" type="tel" [textMask]="{mask: mobileMask}">
                             <mat-error *ngIf="mobile.invalid">{{getMobileMessage()}}</mat-error>
                         </mat-form-field>
                         <mat-form-field class="mb-2">
