--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -4,8 +4,10 @@
         <div class="text-center">
             <img src="../../assets/img/SVG/account-created.svg" alt="">
             <h3>Account Created</h3>
-            <label for="">Thanks for joining FollowUp, Your account has been created successfully!</label>
-
+            <label style="display: block">Thanks for joining FollowUp, Your account has been created successfully!</label>
+            <label style="display: block">You can start using the FollowUp apps with a <span style="color:#e5b000">free
+                    trial for 30
+                    days and &#163;6.99/month after.</span></label>
             <button class="btn btn-primary d-block m-auto" [routerLink]="['/']" fragment="home" routerLinkActive="router-link-active">Go to Homepage</button>
         </div>
     </div>
