--- a/src/app/success/success.component.scss
+++ b/src/app/success/success.component.scss
@@ -15,6 +15,7 @@
     }
     label {
         color: #767c86;
+        margin: 20px;
     }
     button.btn-primary {
         background-color: white;
