--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,6 +1,8 @@
 .navbar.navbar-transparent .nav-link p {
-    font-family: 'Monsterrat-SemiBold';
-    color: #ffffff !important;
+    font-family: 'Monsterrat-Bold';
+    color: #e5b000 !important;
+    font-weight: bold;
+    font-size: 14px;
      :hover {
         color: #403D39 !important;
     }
