--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -7,7 +7,6 @@
                     <h1 class="animated fadeInUp">FollowUp</h1>
                     <h3>Building rapport through simple habits</h3>
                     <h6>Our goal is to harness the power of human habit and make building lasting relationships second nature for everyone.
-                        <!-- <a style="color: #e5b000;font-size: 14px;font-weight: bold;" href="https://youtu.be/7x3_HankJP0" target="_blank">See for yourself</a> -->
                     </h6>
                     <br />
                     <div class="col-12 p-0 flex-row flex">
@@ -23,8 +22,16 @@
             </div>
         </div>
     </div>
-    <!-- </div> -->
 </div>
+<!-- <div class="home-vid">
+    <video src="../../assets/videos/home_vid.mp4" autoplay='true'></video>
+    <div class="button-section">
+        <a href="https://itunes.apple.com/us/app/followup-pro/id1458386312?ls=1&mt=8" target="_blank" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
+        </a>
+        <a href="https://play.google.com/store/apps/details?id=uk.co.followuppro.followuppro.new" target="_blank" class="btn appBtn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
+        </a>
+    </div>
+</div> -->
 <div class="main">
     <div class="section text-left" #features id="features">
         <div class="container">
