--- a/src/app/new-landing/landing.component.html
+++ b/src/app/new-landing/landing.component.html
@@ -24,7 +24,7 @@
     </div>
 </div> -->
 <div class="home-vid">
-    <video src="../../assets/videos/home_vid.mp4" autoplay='true'></video>
+    <video src="../../assets/videos/home_vid.mp4" autoplay='true' loop='true'></video>
     <div class="button-section">
         <a href="https://itunes.apple.com/us/app/followup-pro/id1458386312?ls=1&mt=8" target="_blank" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
         </a>
