--- a/src/app/new-landing/landing.component.html
+++ b/src/app/new-landing/landing.component.html
@@ -24,11 +24,15 @@
     </div>
 </div> -->
 <div class="home-vid">
-    <video src="../../assets/videos/home_vid.mp4" autoplay='true' loop='true'></video>
+    <!-- <video src="../../assets/videos/home_vid.mp4" autoplay='true' loop='true'></video> -->
     <!-- <video autoplay='true' loop='true'>
         <source type="video/mp4"
             src="https://player.vimeo.com/video/373647370?autoplay=1&loop=1&autopause=0&controls=0">
     </video> -->
+    <iframe src="https://player.vimeo.com/video/373647370?background=1&autoplay=1&loop=1&autopause=0&api=1&controls=0&muted=1?playsinline=0" allow="autoplay; fullscreen" playsinline frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+    <!-- <iframe src="https://www.youtube.com/embed/pPKyyKB0njw?controls=0&autoplay=1&loop=1&modestbranding=0" allow="autoplay">
+    </iframe> -->
     <div class="button-section">
         <a href="https://itunes.apple.com/us/app/followup-pro/id1458386312?ls=1&mt=8" target="_blank" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
         </a>
