--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true" #home id="home">
+<!-- <div class="page-header" data-parallax="true" #home id="home">
     <div class="filter"></div>
     <div class="container">
         <div class="row">
@@ -22,16 +22,19 @@
             </div>
         </div>
     </div>
-</div>
-<!-- <div class="home-vid">
-    <video src="../../assets/videos/home_vid.mp4" autoplay='true'></video>
+</div> -->
+
+<div class="home-vid">
+    <div class="embed-container">
+        <iframe src="https://player.vimeo.com/video/374117522?background=1&autoplay=1&loop=1&autopause=0&api=1&controls=0&muted=1?playsinline=0" allow="autoplay; fullscreen" playsinline frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
     <div class="button-section">
         <a href="https://itunes.apple.com/us/app/followup-pro/id1458386312?ls=1&mt=8" target="_blank" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
         </a>
         <a href="https://play.google.com/store/apps/details?id=uk.co.followuppro.followuppro.new" target="_blank" class="btn appBtn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
         </a>
     </div>
-</div> -->
+</div>
 <div class="main">
     <div class="section text-left" #features id="features">
         <div class="container">
