--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -115,9 +115,21 @@
 .home-vid {
     // background: url(../../assets/videos/home_vid.mp4);
     width: 100%;
-    height: 100vh;
-    video {
-        width: 100%;
+    height: calc(100vh - 90px);
+    margin-top: 90px;
+    .embed-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        max-width: 100%;
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     }
     .button-section {
         position: absolute;
@@ -172,6 +184,35 @@
         max-width: 100%!important;
         img.position-absolute {
             position: relative!important;
+        }
+    }
+    .home-vid {
+        // background: url(../../assets/videos/home_vid.mp4);
+        width: 100%;
+        height: auto;
+        min-height: 215px;
+        margin-top: 74px;
+        video,
+        iframe {
+            width: 100%;
+            height: 215px;
+            min-height: 215px;
+            .player {
+                max-width: 100% !important;
+                height: 100vh !important;
+            }
+        }
+        .button-section {
+            position: absolute;
+            right: 10px;
+            top: 240px;
+            height: 40px;
+            width: auto;
+        }
+        .btn {
+            background: #e5b000;
+            border: 2px solid #e5b000;
+            padding: 5px 5px;
         }
     }
 }
