--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
+<nav class="navbar navbar-expand-lg fixed-top " color-on-scroll="500">
+    <!-- navbar-transparent -->
     <div class="container">
         <div class="navbar-translate">
             <a class="navbar-brand" [routerLink]="['/']" fragment="home" (click)="scrollIntoView('home')">
