--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-.navbar.navbar-transparent .nav-link p {
+.navbar .nav-link p {
     font-family: 'Monsterrat-Bold';
     color: #e5b000 !important;
     font-weight: bold;
