--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -8,6 +8,12 @@
             <label style="display: block">You can start using the FollowUp apps with a <span style="color:#e5b000">free
                     trial for 30
                     days and &#163;6.99/month after.</span></label>
+            <div class="button-section">
+                <a href="https://itunes.apple.com/us/app/followup-pro/id1458386312?ls=1&mt=8" target="_blank" class="btn mr-4 appBtn"><img class="mr-2" src="../../assets/img/SVG/app_store_icon.svg">App Store
+                </a>
+                <a href="https://play.google.com/store/apps/details?id=uk.co.followuppro.followuppro.new" target="_blank" class="btn appBtn"><img class="mr-2" src="../../assets/img/SVG/play_store_icon.svg">Google Play
+                </a>
+            </div>
             <button class="btn btn-primary d-block m-auto" [routerLink]="['/']" fragment="home" routerLinkActive="router-link-active">Go to Homepage</button>
         </div>
     </div>
