--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -11,6 +11,8 @@
         <div class="row col-12 col-md-8 offset-md-2">
             <div class="formDiv m-auto">
                 <h3 class="col-12">Sign Up</h3>
+                <button class="loginBtn loginBtn-facebook" (click)="socialSignUp('facebook')">Sign up with Facebook</button>
+                <button class="loginBtn loginBtn-google" (click)="socialSignUp('google')">Sign up with Google</button>
                 <label class="col-12 mb-4">Enter your details to continue</label>
                 <form class="signup-form" #personal="ngForm" (ngSubmit)="signUpAPI(personal)">
                     <mat-form-field class="mb-2 col-12 col-md-6">
@@ -44,7 +46,7 @@
                         <input name="signupMobile" [(ngModel)]="signup.mobile" maxlength="15" minlength="9" matInput placeholder="Mobile Number" type="tel" [textMask]="{mask: mobileMask}">
                         <mat-error *ngIf="mobile.invalid">{{getMobileMessage()}}</mat-error>
                     </mat-form-field>
-                    <mat-form-field class="mb-2 col-12">
+                    <mat-form-field class="mb-2 col-12" *ngIf="mode_of_signup == 0">
                         <input name="signupPassword" [(ngModel)]="signup.password" maxlength="100" matInput placeholder="Password" type="password" minlength="6" required>
                         <mat-error *ngIf="password.invalid">{{getPasswordMessage()}}</mat-error>
                     </mat-form-field>
