--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -69,7 +69,7 @@
     box-sizing: border-box;
     position: relative;
     /* width: 13em;  - apply for fixed size */
-    margin: 0.2em;
+    margin: 2rem 1rem;
     padding: 0 15px 0 46px;
     border: none;
     text-align: left;
@@ -101,20 +101,20 @@
 
 /* Facebook */
 
-.loginBtn--facebook {
+.loginBtn-facebook {
     background-color: #4C69BA;
     background-image: linear-gradient(#4C69BA, #3B55A0);
     /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
     text-shadow: 0 -1px 0 #354C8C;
 }
 
-.loginBtn--facebook:before {
+.loginBtn-facebook:before {
     border-right: #364e92 1px solid;
     background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
 }
 
-.loginBtn--facebook:hover,
-.loginBtn--facebook:focus {
+.loginBtn-facebook:hover,
+.loginBtn-facebook:focus {
     background-color: #5B7BD5;
     background-image: linear-gradient(#5B7BD5, #4864B1);
 }
@@ -122,17 +122,17 @@
 
 /* Google */
 
-.loginBtn--google {
+.loginBtn-google {
     /*font-family: "Roboto", Roboto, arial, sans-serif;*/
     background: #DD4B39;
 }
 
-.loginBtn--google:before {
+.loginBtn-google:before {
     border-right: #BB3F30 1px solid;
     background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
 }
 
-.loginBtn--google:hover,
-.loginBtn--google:focus {
+.loginBtn-google:hover,
+.loginBtn-google:focus {
     background: #E74B37;
 }
