--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -29,12 +29,7 @@
                     </mat-form-field>
                     <mat-form-field class="mb-2 col-2">
                         <mat-label>Code</mat-label>
-                        <!-- <mat-select [(ngModel)]="signup.code" name="signupCode" required>
-                            <mat-option *ngFor="let country of countries" [value]="country.dial_code">
-                                {{country.dial_code}}
-                            </mat-option>
-                        </mat-select> -->
-                        <input type="text" aria-label="Number" matInput [(ngModel)]="signup.code" name="signupCode" [matAutocomplete]="auto" [formControl]="myControl" required>
+                        <input type="text" aria-label="Number" matInput [(ngModel)]="signup.code" name="signupCode" [matAutocomplete]="auto" [formControl]="myControl">
                         <mat-autocomplete #auto="matAutocomplete" (optionSelected)='getCode($event.option.value)'>
                             <mat-option *ngFor="let country of filteredCountries | async" [value]="country.dial_code">
                                 {{country.dial_code}}
@@ -42,7 +37,6 @@
                         </mat-autocomplete>
                     </mat-form-field>
                     <mat-form-field class="mb-2 col-10">
-                        <!-- <span matPrefix>+91 &nbsp;</span> -->
                         <input name="signupMobile" [(ngModel)]="signup.mobile" maxlength="15" minlength="9" matInput placeholder="Mobile Number" type="tel" [textMask]="{mask: mobileMask}">
                         <mat-error *ngIf="mobile.invalid">{{getMobileMessage()}}</mat-error>
                     </mat-form-field>
@@ -50,15 +44,13 @@
                         <input name="signupPassword" [(ngModel)]="signup.password" maxlength="100" matInput placeholder="Password" type="password" minlength="6" required>
                         <mat-error *ngIf="password.invalid">{{getPasswordMessage()}}</mat-error>
                     </mat-form-field>
-                    <mat-form-field class="mb-2 col-12">
+                    <mat-form-field class="mb-2 col-12" *ngIf="mode_of_signup == 0">
                         <input name="signupCPassword" [(ngModel)]="signup.cPassword" maxlength="100" matInput placeholder="Confirm Password" type="password" required minlength="6">
                         <mat-error *ngIf="password.invalid">{{getPasswordMessage()}}</mat-error>
                     </mat-form-field>
                     <div class="form-group col-12">
                         <button mat-raised-button color="primary" class="btn w-100 btn-followUp">Sign Up</button>
-                        <!-- <button class="btn w-100 btn-followUp"></button> -->
                     </div>
-                    <!-- <label class="col-12">By clicking “Sign Up” above, you are agreeing to our Terms & Conditions.</label> -->
                 </form>
             </div>
         </div>
